force-app/main/default/objects/OpsIncident__c/OpsIncident__c.object-meta.xml
<CustomObject>
    <description>Operational incident records for flow, apex, and integration failures used by the Incident Copilot MVP.</description>
    <label>Ops Incident</label>
    <nameField>
        <displayFormat>INC-{000000}</displayFormat>
        <label>Incident Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ops Incidents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>