force-app/main/default/objects/OpsIncident__c/fields/AIConfidence__c.field-meta.xml
<CustomField>
    <fullName>AIConfidence__c</fullName>
    <label>AI Confidence</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>