force-app/main/default/objects/OpsIncident__c/fields/ApprovedBySlack__c.field-meta.xml
<CustomField>
    <fullName>ApprovedBySlack__c</fullName>
    <label>Approved by Slack</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>