force-app/main/default/objects/OpsIncident__c/fields/ProposedFix__c.field-meta.xml
<CustomField>
    <fullName>ProposedFix__c</fullName>
    <label>Proposed Fix</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>