force-app/main/default/objects/OpsIncident__c/fields/RecordIdContext__c.field-meta.xml
<CustomField>
    <fullName>RecordIdContext__c</fullName>
    <label>Record ID Context</label>
    <length>18</length>
    <type>Text</type>
</CustomField>