force-app/main/default/objects/OpsIncident__c/fields/SlackMessageTs__c.field-meta.xml
<CustomField>
    <fullName>SlackMessageTs__c</fullName>
    <label>Slack Message Timestamp</label>
    <length>50</length>
    <type>Text</type>
</CustomField>