force-app/main/default/objects/OpsIncident__c/fields/SourceType__c.field-meta.xml
<CustomField>
    <fullName>SourceType__c</fullName>
    <label>Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Flow</fullName><default>false</default><label>Flow</label></value>
            <value><fullName>Apex</fullName><default>false</default><label>Apex</label></value>
            <value><fullName>Integration</fullName><default>false</default><label>Integration</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>